add index text, add filtering on skills on profile page

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,3 +1,16 @@
+<h2>I am developer, solution architect</h2>
 <p>
-  index works!
+  interested in programming, finanace, sport and outdoor activities.
+  Always looking for intresting projects where i can develop myself and be a part of the future.  
 </p>
+
+<section class="princips">
+  <h3>my princips</h3>
+  <ul>
+    <li>make simple and functional solutions</li>
+    <li>be honest</li>
+    <li>be transparent</li>
+    <li>be brave</li>
+    <li>freedom</li>
+  </ul>
+</section>
