--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,4 +1,6 @@
-<p>
-  <a routerLink="/portfolio">work</a>
+<header class="menu">
+  <a routerLink="/">home</a>
+  <a routerLink="/portfolio">CV</a>
+  <a routerLink="/Blog">Blog</a>
   <a routerLink="/contact">Contact</a>
-</p>
+</header>
