add profile and company pages

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,4 +1,4 @@
-<h2>I am developer, solution architect</h2>
+<h2>developer, solution architect</h2>
 <p>
   interested in programming, finanace, sport and outdoor activities.
   Always looking for intresting projects where i can develop myself and be a part of the future.  
