--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,16 +1,12 @@
-<h2>developer, solution architect</h2>
-<p>
-  interested in programming, finanace, sport and outdoor activities.
-  Always looking for intresting projects where i can develop myself and be a part of the future.  
-</p>
+<section>
+  <h2>Developer, Solution architect</h2>
+  <p>
+    interested in programming, finanace, sport and outdoor activities.
+    Always looking for intresting projects where i can develop myself and be a part of the future.  
+  </p>
+</section>
 
-<section class="princips">
-  <h3>my princips</h3>
-  <ul>
-    <li>make simple and functional solutions</li>
-    <li>be honest</li>
-    <li>be transparent</li>
-    <li>be brave</li>
-    <li>freedom</li>
-  </ul>
+<section class="principles">
+  <h3>my principles</h3>
+  <p>simple and functional solutions, be honest, be transparent, be brave, freedom</p>
 </section>
