--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,12 +1,30 @@
 <section>
-  <h2>Developer, Solution architect</h2>
+  <h2>Software Developer</h2>
   <p>
-    interested in programming, finanace, sport and outdoor activities.
-    Always looking for intresting projects where i can develop myself and be a part of the future.  
+    17+ years of experience in IT industry. Worked as java developer, front-end developer, java team lead and project manager.
+  </p>
+  <p>
+    interested in programming, finance, sport and outdoor activities.
+    Always looking for interesting projects where i can develop myself and be a part of the future. 
   </p>
 </section>
 
 <section class="principles">
-  <h3>my principles</h3>
+  <h3>My principles</h3>
   <p>simple and functional solutions, be honest, be transparent, be brave, freedom</p>
+</section>
+
+<section>
+  <header><h3>Location</h3></header>
+  <p>Norway, Oslo or Sweden, Stockholm</p>
+</section>
+
+<section>
+  <h3>Looking for job in finance / investing / it</h3>
+  I would like to work on project connected with investing and evaluation of companies. Prefer to work remotely with visiting office once a week or once a month.
+  <p>do you have an offer? <a routerLink="/contact">contact me</a></p>
+</section>
+
+<section>
+  <p>this site was made in angular because of fun.</p>
 </section>
