add menu/index styling

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,5 +1,7 @@
 <header class="menu">
-  <a routerLink="/">home</a>
-  <a routerLink="/portfolio">CV</a>
-  <a routerLink="/contact">Contact</a>
+  <ul>
+    <li><a routerLink="/">home</a></li>
+    <li><a routerLink="/portfolio">CV</a></li>
+    <li><a routerLink="/contact">Contact</a></li>
+  </ul>
 </header>
