--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,8 +1,11 @@
-<section>
-  <h2>Software Developer</h2>
-  <p>
-    17+ years of experience in IT industry. Worked as java developer, front-end developer, java team lead and project manager.
-  </p>
+<section class="intro">
+  <h1><span>Hi,</span><span>I'm Yuri Ivanov,</span></h1>
+  <h4>fullstack software developer</h4>
+</section>
+
+<section class="container about">
+  <h3>About me</h3>
+  <p>20+ years of experience in IT industry. Worked as java developer, front-end developer, java team lead and project manager.</p>
   <p>
     interested in programming, finance, sport and outdoor activities.
     Always looking for interesting projects where i can develop myself and be a part of the future. 
@@ -23,8 +26,4 @@
   <h3>Looking for job in finance / investing / it</h3>
   I would like to work on project connected with investing and evaluation of companies. Prefer to work remotely with visiting office once a week or once a month.
   <p>do you have an offer? <a routerLink="/contact">contact me</a></p>
-</section>
-
-<section>
-  <p>this site was made in angular because of fun.</p>
 </section>
