--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,12 +2,21 @@
 body{
     height: calc(100vh - 50px);
     margin: 0px;
-    padding: 1em;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 120%;
+    font-family: Helvetica, Arial, 'Poppins', sans-serif;
+    font-size: 100%;
+    background: #FFF;
+    color: #333;
 }
 p{
     padding: 1em 0;
+    color: #888888;
+    font-family: Poppins, Arial, Helvetica, sans-serif;
+    font-weight: normal;
+    letter-spacing: 0;
+    font-weight: 400;
+}
+div, section, h1, h2, h3, h4, h5, h6 {
+    margin: 0px;
 }
 .hr-list{
     li{
@@ -28,14 +37,12 @@ li{
     visibility: hidden;
 }
 
-.content{
-    width: 1024px;
+.container{
     margin: 0 auto;
 }
 
 @media all and (max-width: 1024px) {
-    .content{
+    .container{
         width: auto;
     }
-    
 }
