improve main menu

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,7 +1,9 @@
 <header class="menu">
-  <ul>
-    <li><a routerLink="/">home</a></li>
-    <li><a routerLink="/portfolio">CV</a></li>
-    <li><a routerLink="/contact">Contact</a></li>
-  </ul>
+  <nav class="container text-width">
+    <ul>
+      <li><a routerLink="/">home</a></li>
+      <li><a routerLink="/portfolio">CV</a></li>
+      <li><a routerLink="/contact">Contact</a></li>
+    </ul>
+  </nav>
 </header>
