--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -3,27 +3,36 @@
   <h4>fullstack software developer</h4>
 </section>
 
-<section class="container about">
-  <h3>About me</h3>
-  <p>20+ years of experience in IT industry. Worked as java developer, front-end developer, java team lead and project manager.</p>
-  <p>
-    interested in programming, finance, sport and outdoor activities.
-    Always looking for interesting projects where i can develop myself and be a part of the future. 
-  </p>
+<section class="about">
+  <div class="container">
+    <h3>About me</h3>
+    <p>20+ years of experience in IT industry. Worked as java developer, front-end developer, java team lead and project manager.</p>
+    <p>
+      interested in programming, finance, sport and outdoor activities.
+      Always looking for interesting projects where i can develop myself and be a part of the future. 
+    </p>
+
+    <section>
+      <header><h4>Location</h4></header>
+      <p>Norway, Oslo or Sweden, Stockholm</p>
+    </section>
+      
+  </div>
 </section>
 
 <section class="principles">
-  <h3>My principles</h3>
-  <p>simple and functional solutions, be honest, be transparent, be brave, freedom</p>
+  <div class="container">
+    <h3>My principles</h3>
+    <p>simple and functional solutions, be honest, be transparent, be brave, freedom</p>
+  </div>
 </section>
 
 <section>
-  <header><h3>Location</h3></header>
-  <p>Norway, Oslo or Sweden, Stockholm</p>
-</section>
-
-<section>
-  <h3>Looking for job in finance / investing / it</h3>
-  I would like to work on project connected with investing and evaluation of companies. Prefer to work remotely with visiting office once a week or once a month.
-  <p>do you have an offer? <a routerLink="/contact">contact me</a></p>
+  <div class="container">
+    <header><h3>Looking for job in finance / investing / it</h3></header>
+    <p>
+      I would like to work on project connected with investing and evaluation of companies. Prefer to work remotely with visiting office once a week or once a month.
+    </p>
+    <p>do you have an offer? <a routerLink="/contact">contact me</a></p>
+  </div>
 </section>
