--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@ body{
 p{
     padding: 1em 0;
     color: #888888;
-    font-family: Poppins, Arial, Helvetica, sans-serif;
+    font-family: Helvetica, Arial, Poppins, sans-serif;
     font-weight: normal;
     letter-spacing: 0;
     font-weight: 400;
@@ -18,6 +18,11 @@ p{
 div, section, h1, h2, h3, h4, h5, h6 {
     margin: 0px;
 }
+
+section{
+    padding: 2em 1em;
+}
+
 .hr-list{
     li{
         display: inline-block;
@@ -39,10 +44,15 @@ li{
 
 .container{
     margin: 0 auto;
+    max-width: 960px;
+}
+
+.text-width{
+    width: 960px;
 }
 
 @media all and (max-width: 1024px) {
     .container{
-        width: auto;
+        max-width: auto;
     }
 }
