--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,6 +1,15 @@
 <section class="intro">
-  <h1><span>Hi,</span><span>I'm Yuri Ivanov,</span></h1>
-  <h4>fullstack software developer</h4>
+  <div class="container">
+    <h1><span>Hi,</span><span>I'm Yuri Ivanov,</span></h1>
+    <h4>fullstack software developer</h4>
+
+    <canvas #canvas width="600" height="600"></canvas>
+
+    <section class="principles">
+          <h3>My principles</h3>
+          <p>simple and functional solutions, be honest, be transparent, be brave, freedom</p>
+      </section>
+  </div>
 </section>
 
 <section class="about">
@@ -19,14 +28,7 @@
       
   </div>
 </section>
-
-<section class="principles">
-  <div class="container">
-    <h3>My principles</h3>
-    <p>simple and functional solutions, be honest, be transparent, be brave, freedom</p>
-  </div>
-</section>
-
+<hr>
 <section>
   <div class="container">
     <header><h3>Looking for job in finance / investing / it</h3></header>
