--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,9 +18,11 @@ p{
 div, section, h1, h2, h3, h4, h5, h6 {
     margin: 0px;
 }
-
+hr {
+    width: 20em;
+}
 section{
-    padding: 2em 1em;
+    padding: 2em 0em;
 }
 
 .hr-list{
