--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-<header class="menu">
+<header class="menu" #stickyMenu [class.smallmenu] = "smallmenu">
   <nav class="container text-width">
     <ul>
       <li><a routerLink="/">home</a></li>
